--- a/package.json
+++ b/package.json
@@ -120,6 +120,8 @@
     "webpack-merge": "5.8.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "2.9.9",
     "@mui/material": "5.10.9",
     "@mui/system": "5.10.9",
